--- a/Lect4 for loop/Lect4_Part1.ipynb
+++ b/Lect4 for loop/Lect4_Part1.ipynb
@@ -11,6 +11,112 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Вспомним строки, списки, кортежи, множества\n",
+    "\n",
+    "[CheatSheet](https://dfedorov.spb.ru/pandas/cheatsheet/Python_Notes.pdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 'Это какая-то строка для преобразований.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Э', 'т', 'о', ' ', 'к', 'а', 'к', 'а', 'я', '-', 'т', 'о', ' ', 'с', 'т', 'р', 'о', 'к', 'а', ' ', 'д', 'л', 'я', ' ', 'п', 'р', 'е', 'о', 'б', 'р', 'а', 'з', 'о', 'в', 'а', 'н', 'и', 'й', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Это', 'какая-то', 'строка', 'для', 'преобразований.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Э', 'т', 'о', ' ', 'к', 'а', 'к', 'а', 'я', '-', 'т', 'о', ' ', 'с', 'т', 'р', 'о', 'к', 'а', ' ', 'д', 'л', 'я', ' ', 'п', 'р', 'е', 'о', 'б', 'р', 'а', 'з', 'о', 'в', 'а', 'н', 'и', 'й', '.')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tuple(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{' ', 'л', 'т', 'р', 'й', '-', 'в', '.', 'д', 'п', 'а', 'б', 'к', 'и', 'я', 'о', 'н', 'Э', 'с', 'е', 'з'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Это': 1, 'какая-то': 1, 'строка': 1, 'для': 1, 'преобразований.': 1}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict.fromkeys(a.split(), 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "nkBj5Zg7BkoG"
    },
@@ -357,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,160 +490,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Beautiful',\n",
-       " 'is',\n",
-       " 'better',\n",
-       " 'than',\n",
-       " 'ugly.',\n",
-       " 'Explicit',\n",
-       " 'is',\n",
-       " 'better',\n",
-       " 'than',\n",
-       " 'implicit.',\n",
-       " 'Simple',\n",
-       " 'is',\n",
-       " 'better',\n",
-       " 'than',\n",
-       " 'complex.',\n",
-       " 'Complex',\n",
-       " 'is',\n",
-       " 'better',\n",
-       " 'than',\n",
-       " 'complicated.',\n",
-       " 'Flat',\n",
-       " 'is',\n",
-       " 'better',\n",
-       " 'than',\n",
-       " 'nested.',\n",
-       " 'Sparse',\n",
-       " 'is',\n",
-       " 'better',\n",
-       " 'than',\n",
-       " 'dense.',\n",
-       " 'Readability',\n",
-       " 'counts.',\n",
-       " 'Special',\n",
-       " 'cases',\n",
-       " \"aren't\",\n",
-       " 'special',\n",
-       " 'enough',\n",
-       " 'to',\n",
-       " 'break',\n",
-       " 'the',\n",
-       " 'rules.',\n",
-       " 'Although',\n",
-       " 'practicality',\n",
-       " 'beats',\n",
-       " 'purity.',\n",
-       " 'Errors',\n",
-       " 'should',\n",
-       " 'never',\n",
-       " 'pass',\n",
-       " 'silently.',\n",
-       " 'Unless',\n",
-       " 'explicitly',\n",
-       " 'silenced.',\n",
-       " 'In',\n",
-       " 'the',\n",
-       " 'face',\n",
-       " 'of',\n",
-       " 'ambiguity,',\n",
-       " 'refuse',\n",
-       " 'the',\n",
-       " 'temptation',\n",
-       " 'to',\n",
-       " 'guess.',\n",
-       " 'There',\n",
-       " 'should',\n",
-       " 'be',\n",
-       " 'one--',\n",
-       " 'and',\n",
-       " 'preferably',\n",
-       " 'only',\n",
-       " 'one',\n",
-       " '--obvious',\n",
-       " 'way',\n",
-       " 'to',\n",
-       " 'do',\n",
-       " 'it.',\n",
-       " 'Although',\n",
-       " 'that',\n",
-       " 'way',\n",
-       " 'may',\n",
-       " 'not',\n",
-       " 'be',\n",
-       " 'obvious',\n",
-       " 'at',\n",
-       " 'first',\n",
-       " 'unless',\n",
-       " \"you're\",\n",
-       " 'Dutch.',\n",
-       " 'Now',\n",
-       " 'is',\n",
-       " 'better',\n",
-       " 'than',\n",
-       " 'never.',\n",
-       " 'Although',\n",
-       " 'never',\n",
-       " 'is',\n",
-       " 'often',\n",
-       " 'better',\n",
-       " 'than',\n",
-       " '*right*',\n",
-       " 'now.',\n",
-       " 'If',\n",
-       " 'the',\n",
-       " 'implementation',\n",
-       " 'is',\n",
-       " 'hard',\n",
-       " 'to',\n",
-       " 'explain,',\n",
-       " \"it's\",\n",
-       " 'a',\n",
-       " 'bad',\n",
-       " 'idea.',\n",
-       " 'If',\n",
-       " 'the',\n",
-       " 'implementation',\n",
-       " 'is',\n",
-       " 'easy',\n",
-       " 'to',\n",
-       " 'explain,',\n",
-       " 'it',\n",
-       " 'may',\n",
-       " 'be',\n",
-       " 'a',\n",
-       " 'good',\n",
-       " 'idea.',\n",
-       " 'Namespaces',\n",
-       " 'are',\n",
-       " 'one',\n",
-       " 'honking',\n",
-       " 'great',\n",
-       " 'idea',\n",
-       " '--',\n",
-       " \"let's\",\n",
-       " 'do',\n",
-       " 'more',\n",
-       " 'of',\n",
-       " 'those!']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Beautiful', 'is', 'better', 'than', 'ugly.', 'Explicit', 'is', 'better', 'than', 'implicit.', 'Simple', 'is', 'better', 'than', 'complex.', 'Complex', 'is', 'better', 'than', 'complicated.', 'Flat', 'is', 'better', 'than', 'nested.', 'Sparse', 'is', 'better', 'than', 'dense.', 'Readability', 'counts.', 'Special', 'cases', \"aren't\", 'special', 'enough', 'to', 'break', 'the', 'rules.', 'Although', 'practicality', 'beats', 'purity.', 'Errors', 'should', 'never', 'pass', 'silently.', 'Unless', 'explicitly', 'silenced.', 'In', 'the', 'face', 'of', 'ambiguity,', 'refuse', 'the', 'temptation', 'to', 'guess.', 'There', 'should', 'be', 'one--', 'and', 'preferably', 'only', 'one', '--obvious', 'way', 'to', 'do', 'it.', 'Although', 'that', 'way', 'may', 'not', 'be', 'obvious', 'at', 'first', 'unless', \"you're\", 'Dutch.', 'Now', 'is', 'better', 'than', 'never.', 'Although', 'never', 'is', 'often', 'better', 'than', '*right*', 'now.', 'If', 'the', 'implementation', 'is', 'hard', 'to', 'explain,', \"it's\", 'a', 'bad', 'idea.', 'If', 'the', 'implementation', 'is', 'easy', 'to', 'explain,', 'it', 'may', 'be', 'a', 'good', 'idea.', 'Namespaces', 'are', 'one', 'honking', 'great', 'idea', '--', \"let's\", 'do', 'more', 'of', 'those!']\n"
+     ]
     }
    ],
    "source": [
-    "zen.split()"
+    "print(zen.split())"
    ]
   },
   {
