--- a/Lect8 OOP/Lect8_Part1.ipynb
+++ b/Lect8 OOP/Lect8_Part1.ipynb
@@ -89,7 +89,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src='https://cs.sberuniversity.online/image/1000/auto/upsize/1bd35314-d56c-11ed-82f2-02420a0002a0'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Определив новый класс, можно создавать сколько угодно объектов на его основе. Как уже было сказано выше, такая структура данных может включать в себя некие свойства, то есть переменные, которыми будет наделен каждый экземпляр класса.\n",
+    "\n",
+    "Еще раз обратим внимание на то, что класс — это шаблон или инструкция по созданию экземпляров. А экземпляр — это объект с конкретными параметрами. Можно провести аналогию со сборочным чертежом автомобиля. Чертеж на заводе один — общий, а вот машины все — уникальные. Они могут быть разной расцветки и комплектации. Также и класс — это один общий шаблон, определяющий данные и поведение каждого конкретного экземпляра. При этом мы вправе каждый экземпляр изменить уникальным для него образом.\n",
     "\n",
     "### Статические и динамические атрибуты класса\n",
     "\n",
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -396,6 +405,7 @@
       "Завод переходит на новый цвет\n",
       "\n",
       "green green green black\n",
+      "Наверху выпущенные до перехода на новый цвет машины, внизу после перехода.\n",
       "red olive red red\n"
      ]
     }
@@ -421,7 +431,60 @@
     "car8 = Car(None,\"Niva\",4) # Покрасили машину в другой цвет\n",
     "\n",
     "print(car1.color,car2.color,car3.color,car4.color)\n",
+    "print(\"Наверху выпущенные до перехода на новый цвет машины, внизу после перехода.\")\n",
     "print(car5.color,car6.color,car7.color,car8.color)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "А можно ли как-то посмотреть все атрибуты класса? Можно! Первый способ, который можно использовать, — это магический метод `__dict__`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mappingproxy({'__module__': '__main__',\n",
+       "              'default_color': 'red',\n",
+       "              '__init__': <function __main__.Car.__init__(self, color, brand, doors_num)>,\n",
+       "              '__dict__': <attribute '__dict__' of 'Car' objects>,\n",
+       "              '__weakref__': <attribute '__weakref__' of 'Car' objects>,\n",
+       "              '__doc__': None})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Car.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'color': 'red', 'brand': 'Niva', 'doors_num': 2}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car5.__dict__ # атрибуты экземпляра класса тоже можно посмотреть!"
    ]
   },
   {
@@ -737,6 +800,37 @@
    ],
    "source": [
     "\"welcome\".upper()   # <- вызывается на строковых данных"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Кроме функции `type()`, которая возвращает тип объекта, переданного ей в скобках, в Python существует функция `isinstance()`, которая принимает два аргумента: объект и название типа данных для проверки. А сама она проверяет, является ли переданный объект экземпляром указанного класса."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "\n",
+    "print(isinstance(a, int))\n",
+    "\n",
+    "b = 1.3\n",
+    "\n",
+    "print(isinstance(b, int))"
    ]
   },
   {
@@ -1215,9 +1309,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Не всегда нам необходимо полностью переопределять метод базового класса. Иногда мы просто хотим расширить или дополнить существующий метод в базовом классе. В этом нам поможет функция `super()`. Вызывая данную функцию в дочернем классе, мы просим Python обратиться к родителю и вызвать у него искомый метод. \n",
+    "\n",
     "Родительским классом является `Car`, который при инициализации принимает бренд машины и количество дверей и предоставляет его через свойства. `Truck` – класс наследник от `Car`. Обратите внимание на его метод `__init__`: в нем первым делом вызывается конструктор его родительского класса: `super().__init__(brand, doors_num)`\n",
     "\n",
-    "`super` – это ключевое слово, которое используется для обращения к родительскому классу. Теперь у объекта класса `Truck` помимо уже знакомых свойств `brand` и `doors_num` появились свойства `load_weight` и `axes`:"
+    "`super()` – это ключевое слово, которое используется для обращения к родительскому классу. Теперь у объекта класса `Truck` помимо уже знакомых свойств `brand` и `doors_num` появились свойства `load_weight` и `axes`:"
    ]
   },
   {
@@ -1296,7 +1392,7 @@
    "source": [
     "### Множественное наследование\n",
     "\n",
-    "Наследовать можно не только один класс, но и несколько одновременно, обретая тем самым их свойства и методы. В данном примере класс `Dog` выступает в роли подкласса для `Animal` и `Pet` , поскольку может являться и тем, и другим. От `Animal Dog` получает способность спать (метод `sleep`), в то время как `Pet` дает возможность играть с хозяином (метод `play`). В свою очередь, оба родительских класса унаследовали поле `name` от `Creature`. Класс `Dog` также получил это свойство и может его использовать. Так как мы не используем конструкторы в наследованных классах, то и вызывать через `super()` ничего не надо. Конструктор родительского класса, вызовется автоматически."
+    "Наследовать можно не только один класс, но и несколько одновременно, обретая тем самым их свойства и методы. В данном примере класс `Dog` выступает в роли подкласса для `Animal` и `Pet` , поскольку может являться и тем, и другим. От `Animal Dog` получает способность спать (метод `sleep`), в то время как `Pet` дает возможность играть с хозяином (метод `play`). В свою очередь, оба родительских класса унаследовали поле `name` от `Creature`. Класс `Dog` также получил это свойство и может его использовать. Так как мы не используем конструкторы в наследованных классах, то и вызывать через `super()` ничего не надо. Конструктор родительского класса вызовется автоматически."
    ]
   },
   {
@@ -1349,6 +1445,8 @@
    "metadata": {},
    "source": [
     "## Полиморфизм\n",
+    "\n",
+    "<img src='https://cs.sberuniversity.online/image/1000/auto/upsize/88d08a5a-d633-11ed-bd83-0242ac120009'>\n",
     "\n",
     "Как уже было сказано во введении в рамках ООП полиморфизм, как правило, используется с позиции переопределения методов базового класса в классе наследнике. Проще всего это рассмотреть на примере. В нашем базовом класс `Car` есть метод `info()`, который печатает сводную информацию по объекту класса `Car` и переопределим этот метод в классе `Truck`, добавим  в него дополнительные данные:"
    ]
@@ -1604,6 +1702,23 @@
    "metadata": {},
    "source": [
     "В первом случае, ответ должен был быть `True`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   |Магический метод|\tОперация|\tОператор|\n",
+    "   |--|--|--|\n",
+    "   __add__(self, other)\t|Сложение|\t+\n",
+    "   __sub__(self, other)|\tВычитание|\t-\n",
+    "   __mul__(self, other)|\tУмножение|\t*\n",
+    "   __floordiv__(self, other)|\tЦелочисленное деление|\t//\n",
+    "   __div__(self, other)|\tДеление|\t/\n",
+    "   __mod__(self, other)|\tОстаток от деления|\t%\n",
+    "   __pow__(self, other)|\tВозведение в степень|\t**\n",
+    "   \n",
+    "И как вы уже могли догадаться, поведение функции `len()` тоже можно определить для вашего класса при помощи магического метода `__len__(self)`. "
    ]
   },
   {
