--- a/Lect9 tg-bot/Lect9_Part1.ipynb
+++ b/Lect9 tg-bot/Lect9_Part1.ipynb
@@ -7,7 +7,7 @@
     "##  <center> Пишем своего телеграм-бота :)</center>\n",
     "\n",
     "\n",
-    "<img src=\"https://branditechture.agency/brand-logos/wp-content/uploads/2022/04/Telegram-Messenger-New-1024x731.png\" width=200>"
+    "<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/1200px-Telegram_2019_Logo.svg.png" width=200>"
    ]
   },
   {
