--- a/Lect_12 pandas EDA, html, requests/Lect12_Part1.ipynb
+++ b/Lect_12 pandas EDA, html, requests/Lect12_Part1.ipynb
@@ -22,6 +22,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "15bb870f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install ydata-profiling --user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e5ec988",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install numba --upgrade --user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee440458",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install numpy --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "a9efa16f",
    "metadata": {},
